First draft - core slides

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spectacle-presentation",
+  "name": "ucb_presesntation",
   "version": "0.0.1",
   "description": "Spectacle presentation",
   "scripts": {
